# obsidian-buttler

./: README.md  pyproject.toml
obsidian_buttler/: __init__.py  run.py
obsidian_buttler/services/: frontmatter.py
obsidian_buttler/utils/: files.py
